# obesity_risk_machine_learning_pipeline

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  requirements-benchmarks.txt  requirements-ci.txt  requirements-modeling.txt  requirements-serving.txt  requirements-training.txt  requirements.txt
.codex/: PROJECT_CONTEXT.md  PROJECT_CONTEXT.template.md  README.md
.github/workflows/: ci.yml
configs/: experiments.json  modeling.json  promotion.json  promotion.schema.json
docker/api/: Dockerfile
docker/mlflow/: Dockerfile  requirements.txt
docs/: BUSINESS_CONTEXT.md  CI_CD.md  INGESTION.md  MODELING.md  PRODUCTION.md
notebooks/: 01_data_exploration_minio.ipynb
scripts/: run_training_pipeline.ps1
src/obesity_risk_pipeline/: __init__.py
src/obesity_risk_pipeline/api/: __init__.py  app.py  cli.py  schemas.py
src/obesity_risk_pipeline/config/: __init__.py  experiments.py  minio.py  modeling.py  promotion.py  settings.py
src/obesity_risk_pipeline/data/: __init__.py  modeling.py  raw_contract.py  validation.py
src/obesity_risk_pipeline/features/: __init__.py  engineering.py  experiments.py  preprocessing.py
src/obesity_risk_pipeline/inference/: __init__.py  cli.py  service.py
src/obesity_risk_pipeline/ingestion/: __init__.py  cli.py  kaggle.py  service.py
tests/: conftest.py
tests/unit/: test_api_serving.py  test_baseline_training.py  test_inference_cli.py  test_kaggle_ingestion.py  test_minio_dataset_store.py  test_mlflow_tracking.py  test_model_registry.py  test_modeling_data.py  test_notebook_contract.py  test_promotion_governance.py  test_training_automation.py
(+20 files in other folders)
